--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,7 @@ production:
   password: <%= ENV['PGPASSWORD'] %>
   host: <%= ENV['PGHOST'] %>
   port: <%= ENV['PGPORT'] %>
+  url: <%= ENV["DATABASE_URL"] %>
 
 # # PostgreSQL. Versions 9.3 and up are supported.
 # #
