--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "devDependencies": {
     "@prettier/plugin-ruby": "^3.2.2",
     "prettier": "^2.8.8"
+  },
+  "dependencies": {
+    "puppeteer": "^20.7.4"
   }
 }
