--- a/config/storage.yml
+++ b/config/storage.yml
@@ -28,6 +28,13 @@ local:
 #   storage_access_key: <%= Rails.application.credentials.dig(:azure_storage, :storage_access_key) %>
 #   container: your_container_name-<%= Rails.env %>
 
+# amazon:
+#   service: S3
+#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+#   region: us-east-1
+#   bucket: <%= Rails.env.production? ? 'medical-reports-bucket' : 'medial-reports-development' %>
+
 # mirror:
 #   service: Mirror
 #   primary: local
