--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-RAILS_SERVE_STATIC_FILES=http://localhost:3000/api/v1
+APP_API_URL=http://localhost:3000/api/v1
 BUCKET=medical-report-staging
 PORT=3000
